--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>Князев Михаил Алексеевич</title>
+      <title>Князев Михаил </title>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
                         <ul class="list-unstyled mb-0">
                            <li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">+7(902)465-22-51</a></li>
                            <li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">knyazevmi@gmail.com</a></li>
-                           <li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="#">knyazevmi.online</a></li>
+                           <li class="mb-2"><i class="fab fa-telegram  fa-fw fa-lg me-2"></i><a class="resume-link" href="https://t.me/knyazevmihail">knyazevmihail</a></li>
                            <li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Йошкар-Ола</li>
                         </ul>
                      </div>
@@ -39,8 +39,9 @@
                         <img class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto rounded-circle" src="assets/img/photo.png" alt="image">
                      </div>
                      <div class="col text-start">
-                        <p class="mb-0">Занимаюсь веб разработкой с опытом создания адаптивных и кроссбраузерных сайтов. Использую Bootstrap и Tailwind  для эффективной разработки интерфейсов.  </p>
-                        <p class="mb-0">Увлекаюсь созданием образовательного контента для технических журналов и сайтов, специализируясь на софтверных и хардверных темах. </p>
+                        <p class="mb-0">Занимаюсь мобильной и веб разработкой с опытом создания адаптивных и кроссбраузерных сайтов. Изучаю и применяю принципы и практики ui/ux для эффективной разработке интерфейсов</p>
+                        <p class="mb-0">Использую практики динамических фреймворков, новых архитектур с применением автоматизации возможных задач и применением AI-решений</p>
+                        <p class="mb-0">Увлекаюсь созданием образовательного контента для технических журналов и сайтов, специализируясь на софтверных и хардверных темах</p>
                      </div>
                   </div>
                </div>
@@ -109,7 +110,7 @@
                                  <ul class="resume-list">
                                     <li>Разработка социальных и игровых приложений </li>
                                     <li>Разработка backend компонентов и функций express/nodejs</li>
-                                    <li>Тестирование мобильных приложений и интеграция автотестов selenium/ AppiumLibrary</li>
+                                    <li>Тестирование мобильных приложений и интеграция автотестов Selenium/AppiumLibrary</li>
                                  </ul>
                                  <hr>
                               </div>
@@ -120,8 +121,8 @@
                                  <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">UpWork, Freelance.ru, telegram etc | 2020-по настоящее время</div>
                               </div>
                               <div class="item-content">
-                                 <p>Разработка и администрирование веб-сайты, перенос между различными платформами. Доработка и интеграция новых функций и дизайна. UI/UX дизайн для веб-сайтов и мобильных приложений. Прототипирование и разработку пользовательских интерфейсов. (Figma, Adobe Photoshop/XD, InVision, Principle, ProtoPie).</p>
-                                 <p>Написание технических статьей и обзоров для таких сайтов, как overclockers.ru/ixbt/dns/onlinetrade.</p>
+                                 <p>Разработка и администрирование веб-сайты, перенос между различными платформами. Доработка и интеграция новых функций и дизайна. UI/UX дизайн для веб-сайтов и мобильных приложений. Прототипирование и разработку пользовательских интерфейсов. (Figma, Adobe Photoshop/XD, InVision, Principle, ProtoPie)</p>
+                                 <p>Написание технических статьей и обзоров для таких сайтов, как overclockers.ru/ixbt/dns/onlinetrade</p>
                               </div>
                            </div>
                         </section>
@@ -129,16 +130,20 @@
                         <section class="skills-section py-3"></section>
                            <h3 class="text-uppercase resume-section-heading mb-4">Интересы</h3>
                            <ul class="list-unstyled resume-interests-list mb-0">
-                              <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0  text-primary">Мобильная разработка</h4>
+                                 <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0  text-primary">Интересы в области искусственного интеллекта (AI) и машинного обучения (ML) </h4><br/>
+                                 <li>Midjourney/Stable Diffusion/Dalle/Flux/Runway/Sora/luma для генерации изображений, видео и прототипов(Фоны, логотипы, иллюстрации), генерация прототипов для UI/UX дизайна</li>
+                                 <li>Использование ChatGPT/Llama/Qwen2/NotionAi</li>
+                                 <li>Автоматизация работы с контентом и кодом, анализ полученных данных</li><br/>
+                                 <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0  text-primary">Мобильная разработка</h4><br/>
                                  <li>Разработка нативных и кроссплатформенных мобильных приложений</li>
                                  <li>Интерес к новым технологиям, таким как Flutter и Kotlin Multiplatform</li>
+                                 <li>Разработка и дизайн интерфейсов с применением принципов UI/UX</li><br/>
                                  <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0  text-primary">Веб разработка</h4>
-                                 <li>Интерес к современным фреймворкам  (React, Vue)</li>
-                                 <li>В данный момент Next.js </li>
-                                 <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0  text-primary">Интерес к написанию технических статей:
-                                 </h4>
-                                 <li>Увлекаюсь созданием образовательного контента для технических журналов и сайтов, специализируясь на софтверных и хардверных темах.</li>
-                                 <li>Стремлюсь объяснять сложные концепции простыми и понятными словами, делая их доступными для широкой аудитории.</li>
+                                 <li>Интерес к современным фреймворкам (React, Vue) и технологиям WAS/PWA/Serverless </li>
+                                 <li>В данный момент Next.js </li><br/>
+                                 <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0  text-primary">Интерес к написанию технических статей:</h4><br/>
+                                 <li>Увлекаюсь созданием образовательного контента для технических журналов и сайтов.</li>
+                                 <li>Стремлюсь объяснять сложные концепции простыми и понятными словами.</li>
                                  <li>Мне интересен процесс исследования новейших технологий, как с программной части, так и со стороны аппаратного обеспечения</li>
                            </ul>
                         </section>
@@ -155,26 +160,22 @@
                                  <li class="mb-2">PostgreSQL/MySQL</li>
                                  <li class="mb-2">Адаптивный дизайн</li>
                                  <li class="mb-2">Кроссбраузерная разработка</li>
-                                 <li class="mb-2">кроссплатформенная разработка</li>
+                                 <li class="mb-2">Кроссплатформенная разработка</li>
                               </ul>
                            </div>
-                           <div class="item">
-                              <h4 class="item-title">Личные</h4>
-                              <ul class="list-unstyled resume-skills-list">
-                                 <li class="mb-2">Постоянное обучение</li>
-                                 <li class="mb-2">Внимательность к пользовательскому опыту<li>
-                                 <li class="mb-2">Креативность</li>
-                                 <li class="mb-2">Управление временем</li>
-                                 <li class="mb-2">Критическое мышление</li>
-                              </ul>
-                           </div>
+                     
                            <div class="item"></div>
                               <h4 class="item-title">Дополнительные </h4>
                               <ul class="list-unstyled resume-skills-list">
-                                 <li class="mb-2">Английский язык: Продвинутый уровень (чтение технической документации, деловая переписка)</li>
+                                 <li class="mb-2">Тестирование и интеграционное тестирование</li>
+                                 <li class="mb-2">Английский язык: Продвинутый уровень B2</li>
                                  <li class="mb-2">Системное администрирование<li>
                                  <li class="mb-2">Серверное администрирование</li>
-                                 <li class="mb-2">Эникей</li>
+                                 <li class="mb-2">Умение работать по методологиям: Waterfall/Agile/Scrum/Kanban</li>
+                                 <li class="mb-2">Умение работать в графических редакторах</li>
+                                 <li class="mb-2">Дизайн и прототипирование UI/UX</li>
+                                 <li class="mb-2">Исследование пользовательского опыта</li>
+                                 <li class="mb-2">Адаптивный дизайн<li>
                               </ul>
                            </div>
                         </section>
