--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
                <hr>
                <div class="resume-footer text-center">
                   <ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted ">
-                     <li class="list-inline-item  mb-lg-0 me-3"><a class="btn-primary" href="#"><i class="fab fa-github-square fa-2x me-2 "data-fa-transform="down-4 " ></i><span class=" d-none d-lg-inline-block text ">github.com/uyellowline</span></a></li>
-                     <li class="list-inline-item mb-lg-0 me-lg-3"><a class="btn-primary" href="#"><i class="fab fa-telegram fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text">@knyazevmihail</span></a></li>
+                     <li class="list-inline-item  mb-lg-0 me-3"><a class="btn-primary" href="https://github.com/uyellowline/resume-main"><i class="fab fa-github-square fa-2x me-2 "data-fa-transform="down-4 " ></i><span class=" d-none d-lg-inline-block text ">github.com/uyellowline</span></a></li>
+                     <li class="list-inline-item mb-lg-0 me-lg-3"><a class="btn-primary" href="https://t.me/knyazevmihail"><i class="fab fa-telegram fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text" >@knyazevmihail</span></a></li>
                   </ul>
                </div>
             </article>
